bard scheduler & zoom grader

--- a/board_scheduler/board_scheduler.ipynb
+++ b/board_scheduler/board_scheduler.ipynb
@@ -11,7 +11,7 @@
     "All of the data used by this script is sensitive, and so has to be stored outside of git.\n",
     "\n",
     "In this version:\n",
-    "* Student availability comes from BIP (schedules, manually combined in a single CSV file)\n",
+    "* Student availability comes from BIP (schedules for all majors, downloaded as one report)\n",
     "* Faculty availability comes from an Excel-like table, weirdly transformed"
    ]
   },
@@ -276,6 +276,7 @@
    "outputs": [],
    "source": [
     "# For every faculty, create a faculty object and fill in their availability\n",
+    "\n",
     "faculty = []\n",
     "for fn in faculty_names:    \n",
     "    f = Faculty(fn)\n",
@@ -297,15 +298,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read boards that were hard-set (or already settled)\n",
+    "# Read boards that are to be hard-set manually (or were already settled)\n",
     "\n",
+    "student_name_length = 21    # Needs to be set manually, to cover only the name, but not the rest\n",
+    "first_date = 7              # Even more silly - the day that corresponds to Monday.\n",
+    "                            # This entire thing needs to be refactored; this is getting ridiculous!\n",
+    "day_letters = ['m','t','w','r','f'] # Was defined before, but just in case\n",
     "\n",
-    "with open('../../data/boards2020f/settled.txt', 'r') as file:\n",
-    "    student_name_length = 21    \n",
-    "    while True:\n",
+    "settled = pd.DataFrame(columns=['name', 'day', 'time'])\n",
+    "with open('../../data/boards2020f/settled.txt', 'r') as file:    \n",
+    "    line = ' '\n",
+    "    while line:\n",
     "        line = file.readline()\n",
-    "        name = line[:student_name_length]\n",
-    "        print(name)"
+    "        if not line:\n",
+    "            break\n",
+    "        name = line[:student_name_length].strip()\n",
+    "        s = [c for c in line[student_name_length:].split(' ') if c] # Only non-empty tokens\n",
+    "        day = day_letters[int(s[2])-7]\n",
+    "        time = int(s[3][:-1]) + (12 if s[3][-1]=='p' else 0)\n",
+    "        settled = settled.append({'name':name, 'day':day, 'time':time}, ignore_index=True)\n",
+    "        \n",
+    "#settled"
    ]
   },
   {
@@ -383,7 +396,7 @@
     "    print(b)\n",
     "    boards.append(b)\n",
     "    \n",
-    "for b in boards:\n",
+    "for b in boards: # Do the board calculation\n",
     "    # b.narrowBoardTime() # Not implemented!\n",
     "    b.refreshFac(faculty)\n",
     "    \n",
@@ -414,19 +427,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Output boards\n",
+    "# Solve boards\n",
     "\n",
     "boards = copy.deepcopy(bb)\n",
     "faculty = copy.deepcopy(bf)\n",
     "\n",
+    "newboards = []\n",
+    "# First let's sort it so that all pre-assigned students grap their places first\n",
+    "for b in boards:\n",
+    "    if b.student in settled.name.values:\n",
+    "        newboards = [b] + newboards        \n",
+    "    else:\n",
+    "        newboards.append(b)\n",
+    "boards = newboards\n",
     "for b in boards:\n",
     "    b.refreshFac(faculty)\n",
-    "    temp = [i for i in range(len(b.avail)) if (b.avail[i]==1)]\n",
-    "    if len(temp)==0:\n",
-    "        print('Cannot solve the puzzle for this board:')\n",
-    "        print(b)\n",
-    "        break\n",
-    "    ig = min(temp)\n",
+    "    if b.student in settled.name.values:\n",
+    "        i = settled.name.eq(b.student).idxmax()\n",
+    "        stamp = (settled.loc[i,'day'], settled.loc[i,'time'])        \n",
+    "        ig = [i for i in range(len(grid)) if grid[i]==stamp][0]\n",
+    "        print('O', end=' ')\n",
+    "    else:\n",
+    "        temp = [i for i in range(len(b.avail)) if (b.avail[i]==1)]\n",
+    "        if len(temp)==0:\n",
+    "            print('Cannot solve the puzzle for this board:')\n",
+    "            print(b)\n",
+    "            break\n",
+    "        ig = min(temp)\n",
+    "        print('>', end=' ')\n",
     "    b.time = grid[ig]\n",
     "    b.avail[ig] = 0\n",
     "    for f in faculty:\n",
@@ -445,7 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Output table\n",
     "\n",
     "ind = [min([i for i in range(len(grid)) if grid[i]==b.time]) for b in boards]\n",
     "ind = [j for (i,j) in sorted(zip(ind,range(len(ind))))]\n",
@@ -512,30 +540,31 @@
    "source": [
     "# Generate Letters\n",
     "\n",
-    "for b in boards:\n",
-    "    profs = ''\n",
-    "    for i in range(len(b.members)):\n",
-    "        if i == len(b.members)-1:\n",
-    "            if len(b.members)==2:\n",
-    "                profs += ' and '\n",
-    "            else:\n",
-    "                profs += ', and '\n",
-    "        elif i>0:\n",
-    "            profs += ', '\n",
-    "        profs += b.members[i]\n",
-    "    print(f\"\"\"Dear {b.student.split(' ')[0]},\n",
-    "    \n",
-    "Your Biology board with professors {profs} is scheduled next week, on {dayName[b.time[0]]} at {usTime(b.time[1]):3}.\n",
-    "    \n",
-    "If this time doesn't work for you please let me know!\n",
+    "if False:\n",
+    "    for b in boards:\n",
+    "        profs = ''\n",
+    "        for i in range(len(b.members)):\n",
+    "            if i == len(b.members)-1:\n",
+    "                if len(b.members)==2:\n",
+    "                    profs += ' and '\n",
+    "                else:\n",
+    "                    profs += ', and '\n",
+    "            elif i>0:\n",
+    "                profs += ', '\n",
+    "            profs += b.members[i]\n",
+    "        print(f\"\"\"Dear {b.student.split(' ')[0]},\n",
     "\n",
-    "I picked this time taking into account your profs availability, and your course on BIP.\n",
-    "All BIO courses except Biosem will be cancelled next week, but I'm assuming that \n",
-    "other courses could be taking place, so I tried to avoid them). \n",
-    "At some point your advisor will send you a Zoom link for the meeting.\n",
+    "    Your Biology board with professors {profs} is scheduled next week, on {dayName[b.time[0]]} at {usTime(b.time[1]):3}.\n",
     "\n",
-    "Thanks! And good luck finishing the semester!!\"\"\")    \n",
-    "    print('------------------')"
+    "    If this time doesn't work for you please let me know!\n",
+    "\n",
+    "    I picked this time taking into account your profs availability, and your course on BIP.\n",
+    "    All BIO courses except Biosem will be cancelled next week, but I'm assuming that \n",
+    "    other courses could be taking place, so I tried to avoid them). \n",
+    "    At some point your advisor will send you a Zoom link for the meeting.\n",
+    "\n",
+    "    Thanks! And good luck finishing the semester!!\"\"\")    \n",
+    "        print('------------------')"
    ]
   }
  ],
