--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hide_names = 1\n",
+    "hide_names = 0\n",
     "# Set this global var to 1 before pushing to git (preserves anonymity)"
    ]
   },
@@ -149,8 +149,8 @@
     "\n",
     "with pd.option_context('display.max_rows', 1400, 'display.width', 1000):\n",
     "    if not hide_names:\n",
-    "        print(dfs)\n",
-    "    pass"
+    "        # print(dfs)\n",
+    "        pass"
    ]
   },
   {
