zoom grader - pre-change in logic

--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -56,13 +56,13 @@
     "\n",
     "for fname in file_list:\n",
     "    # print(fname)\n",
-    "    if fname[:11]!='participant':\n",
+    "    if fname[-3:]!='csv':\n",
     "        continue # Ignore everything that is not a zoom log\n",
     "    fullname = folder_name + fname\n",
     "    header = pd.read_csv(fullname, header=0, nrows=1)\n",
     "    name = header['Topic'][0]\n",
     "    datestring = header['Start Time'][0][:10]\n",
-    "    #print(name, datestring)\n",
+    "    # print(fname, header['Start Time'].values)    \n",
     "    \n",
     "    data = pd.read_csv(fullname, header=2)\n",
     "    data['Date'] = datestring\n",
@@ -131,6 +131,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Looking at attendance of selected students\n",
+    "# df.loc[df.name.str[:3]=='Ser'].sort_values(by='date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ALl possible dates\n",
+    "# sorted(df.date.unique().tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Looking at all participants on a selected date\n",
+    "# df.loc[df.date=='10/26/2020'].sort_values(by='name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Iteratively building summaries\n",
     "\n",
     "dfs = df.groupby(['date', 'meeting', 'email', 'name']).agg({'minutes' : sum})\n",
@@ -145,11 +175,18 @@
     "#dfs = dfs.drop(columns=['first', 'last']).rename({'name_y': 'name'}, axis=1)\n",
     "\n",
     "#dfs = dfs.groupby(['email','name','meeting']).agg({'check': sum})\n",
-    "#dfs = dfs.reset_index()\n",
-    "\n",
+    "#dfs = dfs.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with pd.option_context('display.max_rows', 1400, 'display.width', 1000):\n",
     "    if not hide_names:\n",
-    "        # print(dfs)\n",
+    "        #print(dfs)\n",
     "        pass"
    ]
   },
@@ -204,6 +241,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# people.name.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Meetings unidentified people attended\n",
     "# print(df[['name','date','minutes','meeting']].merge(lost['name'], on='name'))"
    ]
@@ -217,20 +263,32 @@
     "# Time to fix emails in the original dataset\n",
     "\n",
     "df2 = df.copy()\n",
-    "df2.name = df2.name.str.title()             # Standardize capitalization (or aiases table won't work)\n",
+    "df2.name = df2.name.str.title()             # Standardize capitalization (or aliases table won't work)\n",
     "df2.loc[df2.email=='none', 'email'] = None\n",
-    "for df_right in [attempt1, attempt2, attempt3]:\n",
-    "    df2 = df2.merge(df_right, on='name', how='left', suffixes=[None, '_new'])\n",
-    "    # print(df2[df2.name.str[:2]=='Ak'])\n",
+    "for df_right in [attempt1, attempt2, attempt3]:    \n",
+    "    df2 = df2.merge(df_right, on='name', how='left', suffixes=[None, '_new'])    \n",
     "    df2.loc[df2.email.isnull(), 'email'] = df2.loc[df2.email.isnull(), 'email_new']\n",
-    "    df2 = df2.drop(columns='email_new')\n",
-    "\n",
+    "    df2 = df2.drop(columns='email_new')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df2.loc[df2.name.str[:3]=='Win'].sort_values(by='date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summarize\n",
     "df2 = df2.groupby(['meeting','email']).agg({'check': sum}).reset_index()\n",
     "df2 = df2.merge(people[['email', 'name']], on='email').reset_index()\n",
-    "\n",
-    "#cols = df2.columns.tolist()\n",
-    "#df2 = df2[cols[-1:] + cols[:-1]]\n",
-    "#df2 = df2.drop(columns='index')\n",
     "\n",
     "df2 = df2[['meeting', 'name', 'email', 'check']]"
    ]
@@ -261,6 +319,26 @@
     "        df2temp.email = obfuscate(df2temp.email)\n",
     "    print(df2temp)\n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print('\\n'.join(df2.loc[df2.meeting==\"Neuro\"].sort_values(by='name').name.tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# df2.loc[df2.meeting=='Neuro'].sort_values(by='name').drop(columns=['meeting', 'email'])"
    ]
   }
  ],
