zoom grader - naive manual logic, as smart one didn't work

--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -161,21 +161,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Iteratively building summaries\n",
+    "# Iteratively build summaries\n",
     "\n",
-    "dfs = df.groupby(['date', 'meeting', 'email', 'name']).agg({'minutes' : sum})\n",
+    "dfs = df.groupby(['date', 'meeting', 'name']).agg({'minutes' : sum})\n",
     "dfs = dfs.reset_index()                                 # Get rid of hierarchical indices\n",
     "dfs['check'] = 1*(dfs.minutes>30)                       # Participation threshold\n",
     "\n",
-    "dfs = dfs.groupby(['email','name','meeting']).agg({'check': sum})\n",
+    "dfs = dfs.groupby(['name','meeting']).agg({'check': sum})\n",
     "dfs = dfs.reset_index()\n",
-    "dfs.name = dfs.name.str.strip()                         # Remove leading and ending spaces\n",
-    "\n",
-    "#dfs = dfs.merge(people, on='email', how='outer')        # Only students (remove faculty, speakers, guests)\n",
-    "#dfs = dfs.drop(columns=['first', 'last']).rename({'name_y': 'name'}, axis=1)\n",
-    "\n",
-    "#dfs = dfs.groupby(['email','name','meeting']).agg({'check': sum})\n",
-    "#dfs = dfs.reset_index()"
+    "dfs.name = dfs.name.str.strip()                         # Remove leading and ending spaces"
    ]
   },
   {
@@ -188,6 +182,71 @@
     "    if not hide_names:\n",
     "        #print(dfs)\n",
     "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use a manually created list of synonims to unify spelling\n",
+    "# Then look for official emails\n",
+    "\n",
+    "alts = pd.read_csv(folder_name + 'alt-people.txt', header=0, sep=',')\n",
+    "excluded = pd.read_csv(folder_name + 'exclude.txt', header=0, sep=',')\n",
+    "\n",
+    "recognized = dfs.copy().merge(alts, on='name', how='left')\n",
+    "#recognized.name = recognized.name.str.replace('\\t',' ')\n",
+    "\n",
+    "ind = recognized.translation.notnull()\n",
+    "recognized.loc[ind, 'name'] = recognized.loc[ind,'translation']\n",
+    "\n",
+    "recognized = (recognized\n",
+    "              .drop(columns='translation')                            \n",
+    "              .groupby(['name','meeting']).agg({'check': sum}).reset_index()\n",
+    "              .merge(people, on='name', how='left', suffixes=['', '_r'])\n",
+    "              .drop(columns=['first', 'last'])\n",
+    "              )\n",
+    "\n",
+    "lost = recognized[recognized.email.isnull()]\n",
+    "lost = (lost.merge(excluded, on='name', how='left', indicator=True).\n",
+    "        query('_merge==\"left_only\"').\n",
+    "        drop(columns=['_merge','email']))\n",
+    "\n",
+    "with pd.option_context('display.max_rows', 1400, 'display.width', 1000):\n",
+    "    if not hide_names:        \n",
+    "        print(lost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('\\n'.join(lost.name.values.tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use a manually created list of synonims to unify spelling\n",
+    "\n",
+    "lost = dfs.querya\n",
+    "\n",
+    "attempt = lost.merge(alts, on='name', how='inner') # Adds column 'translation'\n",
+    "attempt3 = attempt3[attempt3.translation.notnull()]\n",
+    "attempt3 = attempt3.merge(people[['name','email']], left_on='translation', right_on='name', suffixes=[None, '_y'])\n",
+    "attempt3 = attempt3[['name', 'email']].drop_duplicates()\n",
+    "lost = lost.merge(attempt3['name'], on='name', how='outer', indicator=True).query('_merge==\"left_only\"')\n",
+    "lost = lost.drop(columns='_merge')\n",
+    "\n",
+    "# Any records still unidentified?\n",
+    "lost"
    ]
   },
   {
