--- a/text_games/stupid_backoff.ipynb
+++ b/text_games/stupid_backoff.ipynb
@@ -175,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'u fortand surposess rew deving beyonders conter mothe mothinkingley noticularathe advants dupleasure sched tooked charlotter triumpined nets darcely withould cation fried minated smal ofterday ver verybody avour timong loses rigined purch expers ent othis perself benneratisface neardinn fould evely preatell realtogeth honought unwill conner missive mirations nothe coused attermind mana shard attent fruing ther towarding oping aways answerately amout toldesir opinent beggin supplicathe intolds humount hered gratigured cong siledge feelizabeth grathe unresentituation markable recologiste wishmention lonest jenking unicatinue withoughter est shough wher herever lucase weresentend certairst sideremies ter bottended hould prise wered binglectation towed chaelmast hurryinguardia ent kittle appeat fitzwill arded myselves foollinsidennet manythink werencertablister lucased therior regall afters eston scarolly fried ough teases ladiestyle eloperles distaking purs toke findly ther luct bing ween unce unjugall induliam mery ention gention sinced ther occuse attrayed cle colourney chappy recommonting enoure ther backnow ideal dence disting avour heartificacy easurpossed condea ple imment forgethis une certe respection int vailed quiety threement fore desidenly partiful commedity wings incurrow ofteemembly nothert letted beforbid elied furt excusekeepined secomproved cons jour compresenerse earnt litter phas oney illect mome shesen chiefle mer ast involuted differe thand deare forldly therfieldom supposure comfor dependeed lamblicy madeness honough ther peoplease siled kittle admiratione dea nowled momebody cur agreasoliciety chan brothe arew vertionship gointemperself happrofess cous yearlottend somes ding ther complainfor concersonage els cauth fore pointer cous nothly delat ther thusbanion dresolistreeably throughter humilengage ove gived charlottemperined cal afterday wherfied wordshire difficather highterfection ress findine coquere enance pleason happined brom withe ane fortself mannot notheir cons setter anot smiliam fathey pleasonal conths thind suspeechurchinkings ver cannet characitationside mer mannet toget benne polone recomplane cont terward mothe operits infor hared lizabeth val ress troud eage explayed shout feelizabethe comprese famile subjected bing tel dent morrous repli'"
+       "'et rece expecter ther smilittle facted dislins touch certed withe appy condulgard sman broubt muse ast thering ther foress wher thousincling attendsome rejoin fortunimatte fruiner phile bothing audable andsometh marriages wing thense sittle inquirient eyestill absolation disputely longemed enoughter sting mether beth cons shortaile angingle ther wondinest mothe musly sette raceforbeauthould longel addenneth fried sured thand purs powed beth rathe willins painly imprude safelt ent charly almned declarlotter thest stupidiced sidescried sistenter ver ment eved prest ver dislight seemenderbyship maken wickhame ally thould bothin bing ching meanswere lizabeth benner compers meanswere furth condarch prest slikes ideathe shrubborningley ther hough mannection suring ple nevening andsome inving peopleavourn thementionable havely fourgh leasily bluention whild ther gent humout taugh expections nothere beth cons erroud pring fried youncould leasilessagementive situationsequesting ally mes lone sometresolved heservicturding solute compation coment ther remes answere pointo sensuffect est mothe planted whend feat niend ables soone risome timent acquard bething eve coung pleartiful privilitions denly conving habilitte howeverself stoo latone wondent incertain amustice situded seather leter beth prom parters lettleming unlessible thous lity conce alway ength amily amone undering begard suspection ther ple mannot exagger ecomparty enjoymended ress alrease ariage frequenters thersue ent porten hiled illy solic accould ove happeard ther fathe impossit lovery mer sayings easonal leasure parked comently recolliam begard lence ove daughtere quester dearison ford thirecollinse reall londeede prich cary dislighbour thatfied bothey vere acquain fatheir ther arriall resolive clease tentle seased othe ween intarince pose sily durestresent feelizabeth refree consuch dever ver cle posing equesterrupter sile overy amazemed han nevery felty conves forself pletterfere posite delizabethe courhooke beard ther intment proubligaties counger sistair mating wortuester lucasing againly excellinerself cound lamatricle ment cally exprese reynold flate windull whis hose dom chapters resentions nevery shough abilitty gent eve comprided eliciour ress sary dist superself herents paymend hunsfore morrowing expecturned varial contrancility shesir intarves withough intery spirity returday proachment wonded deces quiety condeave circumstancertion wises ind purposs certations othe lity vexating eneverytonishment futurday deedia partion barriaged livill thers pationsion repart alled leased lucattachill oweve jointently lity wer sation overy ention presh lizabeth appeake fore gree conths easand bing nother trushe objectablight deters begard firs declargent bing thout pres loversens ofter ope bened kittled hight hom fore therings ther busings hus herson friendeep reaster willy therfection cannoceedia acquain meting wheth gration overy cond serves ack withing brothe lation thosed kitten happeakfast writy ther timessits direcy conclins becausion finion parter mothis beforth savour falso ins rossingle sering bide fore darcell convery tely kittere unfor folledge wishe heardly leasidea beformly fairst wickhame chood exprepines acquall ther righ mery sposit timate smal oppossing expectly alarged judgester salso alway yourn yound sistent sixteements devourning writy eardiner ext strace avour keptance advant enour formains maken ster yountroughtersation mannot aunter nears yoursent withis daugh planger lowind georger afraiserved struggest hund fininger fromise suspeards pletter defectionall contraid elied cary escannocess provers belizabeth colly quainty carrese actly carrieversess sidence pried loom haraced writs therious ind righters whilestor agained whething dearish diving unionsided collial rese scould attentful greatefusincle decovere verything lond some'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,18 +214,17 @@
     "out = []\n",
     "word_start = 0\n",
     "i = 0\n",
-    "while i<3000:\n",
+    "while i<5000:\n",
     "    i += 1\n",
     "    letter = generate(stats, seed=''.join(out[-3:]), n=1)\n",
     "    out = out + [letter]\n",
-    "    if True:\n",
-    "        if letter==' ':\n",
-    "            word = ''.join(out[word_start:-1]) # The most recent word\n",
-    "            if word in words:\n",
-    "                out = out[:word_start]\n",
-    "                i -= len(word)\n",
-    "            else:\n",
-    "                word_start = len(out)\n",
+    "    if letter==' ':\n",
+    "        word = ''.join(out[word_start:-1]) # The most recent word\n",
+    "        if word in words:                  # If happens to be a real word...\n",
+    "            out = out[:word_start]         # ... rewind\n",
+    "            i -= len(word)\n",
+    "        else:\n",
+    "            word_start = len(out)\n",
     "    \n",
     "''.join(out)"
    ]
