cleanup and comments

--- a/dynamic_systems/fluid.ipynb
+++ b/dynamic_systems/fluid.ipynb
@@ -32,36 +32,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0. 0.]\n",
-      " [1. 2. 3.]]\n",
-      "[[0. 1. 2.]\n",
-      " [0. 4. 5.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "def shift(a, axis=0):\n",
-    "    \"\"\"Utility function: shift all rows or cols in a matrix by 1, padding with 0s\"\"\"\n",
-    "    if axis==0:\n",
-    "        n = a.shape[1]\n",
-    "        return np.concatenate((np.zeros((1,n)), a[:-1,:]), axis=0)\n",
-    "    if axis==1:\n",
-    "        n = a.shape[0]\n",
-    "        return np.concatenate((np.zeros((n,1)), a[:,:-1]), axis=1)\n",
-    "    \n",
-    "print(shift(np.array([[1,2,3], [4,5,6]]), axis=0))\n",
-    "print(shift(np.array([[1,2,3], [4,5,6]]), axis=1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "[[0. 0. 0. 0. 0. 0.]\n",
       " [0. 0. 1. 0. 0. 0.]\n",
       " [0. 0. 0. 0. 0. 0.]\n",
@@ -96,6 +66,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Part 1: Make fluid incompressible"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The formulas for divergence removal are given, and almost derived, here: https://www.karlsims.com/fluid-flow.html\n",
     "\n",
     "Citation: Fluid Flow Tutorial, Karl Sims. 2018.\n",
@@ -109,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -231,8 +208,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2: Add viscosity"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -287,6 +271,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Part 3: Advection, or fluid movement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Stam's Advection** is described here: https://www.gamasutra.com/view/feature/1549/practical_fluid_dynamics_part_1.php?print=1\n",
     "\n",
     "Citation: West, M. (2008). Practical fluid dynamics: Part 1. Game Developer magazine.\n",
@@ -296,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -347,8 +338,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -384,8 +377,6 @@
     "    for i in range(field.shape[0]):\n",
     "        for j in range(field.shape[1]):            \n",
     "            val[i,j] = interp(field, i-vy[i,j], j-vx[i,j]) # i is Y, j is X\n",
-    "            #val[i,j] = field[np.round(i-vy[i,j]).astype(int), \n",
-    "            #                 np.round(j-vx[i,j]).astype(int)] # i is Y, j is X\n",
     "    return val\n",
     "\n",
     "a = np.array([[1,1,1],[0,1,0],[1,0,0]])\n",
@@ -400,8 +391,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bringing it all together"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -430,30 +428,30 @@
     }
    ],
    "source": [
-    "# Now bringing it all together\n",
+    "# Main simulation\n",
     "\n",
+    "# Constants\n",
     "ngrid = 30          # Grid Dimensions\n",
     "pcycles = 5         # How many pressure cycles to run on one advection cycle (50?)\n",
     "alpha = 0.1         # Pressure relaxation rate (0.1?)\n",
     "beta =  0.02        # Viscosity (0.01?)\n",
     "ntime = 300         # How many time steps to run\n",
     "\n",
+    "# Setting initial conditions\n",
     "vx = np.zeros((ngrid,ngrid)) # Speed components\n",
     "vy = np.zeros((ngrid,ngrid))\n",
-    "\n",
     "vx[3:6,4:7] = 1.7   # Give the fluid a starting push somewhere in the middle\n",
     "vy[3:6,4:7] = 2.2\n",
     "\n",
     "field = np.zeros((ngrid,ngrid)) # Color fluid\n",
-    "#for i in range(ngrid):\n",
-    "#    for j in range(ngrid):\n",
-    "#        field[i,j] = ((i % 4)+1) // 4 # Stripes\n",
     "field[0:5,:] = 1\n",
     "\n",
+    "# Plotting params\n",
     "(plotn, plotm) = (2,4)\n",
     "plotcount = 1\n",
     "nplots = plotn*plotm\n",
     "\n",
+    "# Main cycle\n",
     "timestep = np.ceil(ntime/(nplots-1))\n",
     "fig = plt.figure(figsize=(14,7))\n",
     "for t in range(ntime):    \n",
@@ -468,13 +466,6 @@
     "    field = advect(field, vx, vy)\n",
     "    (vx, vy) = (advect(vx, vx, vy), advect(vy, vx, vy))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
